# app

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2047c39ea9f2_default_params.py  eaf938b47074_initial_migration.py
api/v1/: main.py
app/: __init__.py
core/: database.py
logic/: collect.py  resume.py
models/: base.py  candidate.py  evaluator.py  evaluator_it.py  resume.py  resume_it.py  sql.py
services/: __init__.py  evaluator.py  jobby.py  resume_parser.py  s3.py
utils/: structure.py  system_prompts.py  text_to_filters.py  text_to_sql.py
